@@ -1,21 +1,24 @@
+/* This file is part of KeY - https://key-project.org
+ * KeY is licensed under the GNU General Public License Version 2
+ * SPDX-License-Identifier: GPL-2.0-only */
 package de.uka.ilkd.key.macros.scripts;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import de.uka.ilkd.key.control.AbstractUserInterfaceControl;
-import de.uka.ilkd.key.logic.Name;
-import de.uka.ilkd.key.logic.Named;
 import de.uka.ilkd.key.logic.Term;
 import de.uka.ilkd.key.logic.TermBuilder;
-import de.uka.ilkd.key.logic.op.Function;
+import de.uka.ilkd.key.logic.op.JFunction;
 import de.uka.ilkd.key.logic.op.ProgramVariable;
 import de.uka.ilkd.key.macros.scripts.meta.Option;
 import de.uka.ilkd.key.pp.AbbrevMap;
 import de.uka.ilkd.key.proof.Goal;
 import de.uka.ilkd.key.proof.Node;
 import de.uka.ilkd.key.rule.TacletApp;
+
+import org.key_project.logic.Name;
+import org.key_project.logic.Named;
 
 /**
  * Special "Let" usually to be applied immediately after a manual rule application. Saves a new name
@@ -57,7 +60,7 @@ public class SaveNewNameCommand extends AbstractCommand<SaveNewNameCommand.Param
             final Node node = goal.node().parent();
             final List<String> matches =
                 node.getNameRecorder().getProposals().stream().map(Name::toString)
-                        .filter(str -> str.matches(stringToMatch)).collect(Collectors.toList());
+                        .filter(str -> str.matches(stringToMatch)).toList();
 
             if (matches.size() != 1) {
                 throw new ScriptException(
@@ -73,8 +76,8 @@ public class SaveNewNameCommand extends AbstractCommand<SaveNewNameCommand.Param
             final TermBuilder tb = //
                 stateMap.getProof().getServices().getTermBuilder();
             final Term t;
-            if (lookupResult instanceof Function) {
-                t = tb.func((Function) lookupResult);
+            if (lookupResult instanceof JFunction) {
+                t = tb.func((JFunction) lookupResult);
             } else if (lookupResult instanceof ProgramVariable) {
                 t = tb.var((ProgramVariable) lookupResult);
             } else {
