@@ -1,21 +1,16 @@
-/**
- * KeYResourceManager controls the access to the properties and resources used in the KeY system.
- * Use the static method getManager to get the unique instance.
- */
-
+/* This file is part of KeY - https://key-project.org
+ * KeY is licensed under the GNU General Public License Version 2
+ * SPDX-License-Identifier: GPL-2.0-only */
 package de.uka.ilkd.key.util;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.io.*;
 import java.net.URL;
 import java.nio.channels.Channels;
-import java.nio.channels.FileChannel;
 import java.nio.channels.ReadableByteChannel;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * KeYResourceManager controls the access to the properties and resources used in the KeY system.
@@ -26,7 +21,7 @@ public class KeYResourceManager {
 
     private static final String DEFAULT_VERSION = "x.z.y";
     private static final Set<String> INVISIBLE_BRANCHES =
-        Collections.unmodifiableSet(new HashSet<>(Collections.singletonList("master")));
+        Set.of("master", "main");
 
     /**
      * the unique instance
@@ -102,7 +97,7 @@ public class KeYResourceManager {
     public boolean visibleBranch() {
         final String b = getBranch();
         final String v = getVersion();
-        return !b.equals("") && !INVISIBLE_BRANCHES.contains(b) && !b.startsWith("KeY" + v)
+        return !b.isEmpty() && !INVISIBLE_BRANCHES.contains(b) && !b.startsWith("KeY" + v)
                 && !b.startsWith("KeY" + "-" + v);
     }
 
@@ -170,11 +165,11 @@ public class KeYResourceManager {
 
 
                 long actualTransferredByte;
-                try (final ReadableByteChannel sourceStream =
+                try (ReadableByteChannel sourceStream =
                     Channels.newChannel(resourceURL.openStream());
-                        FileChannel targetStream = new FileOutputStream(targetFile).getChannel()) {
+                        FileOutputStream out = new FileOutputStream(targetFile)) {
                     actualTransferredByte =
-                        targetStream.transferFrom(sourceStream, 0, Long.MAX_VALUE);
+                        out.getChannel().transferFrom(sourceStream, 0, Long.MAX_VALUE);
                 }
                 if (actualTransferredByte < 0 || actualTransferredByte == Long.MAX_VALUE) {
                     throw new RuntimeException("File " + resourcename + " too big.");
