@@ -1,12 +1,13 @@
+/* This file is part of KeY - https://key-project.org
+ * KeY is licensed under the GNU General Public License Version 2
+ * SPDX-License-Identifier: GPL-2.0-only */
 package de.uka.ilkd.key.gui;
-
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+
+import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -29,7 +30,7 @@ public class KeyboardTacletTest {
         assertEquals(3, KeyboardTacletModel.getClashFreePrefix("impLeft", keywords));
 
         Map<String, String> table = KeyboardTacletModel.buildPrefixTable(keywords);
-        List<String> prefixes = table.keySet().stream().sorted().collect(Collectors.toList());
+        List<String> prefixes = table.keySet().stream().sorted().toList();
         assertEquals("[andL, andR, cut, cut_, i]", prefixes.toString());
     }
 }
